--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "babel": "^6.23.0",
+    "express": "^4.18.2",
     "nodemon": "^2.0.22",
+    "pg": "^8.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sequelize": "^6.32.1"
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.13.0",
+    "sequelize": "^6.32.1",
+    "webpack": "^5.88.0",
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
